--- a/clusterpost/src/hapi-jwt-couch-lib/package.json
+++ b/clusterpost/src/hapi-jwt-couch-lib/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/juanprietob/clusterpost#readme",
   "devDependencies": {
-    "hapi": "18.1.0",
+    "@hapi/hapi": "18.2.0",
     "hapi-auth-jwt": "4.0.0",
     "lab": "18.0.2"
   },
