--- a/clusterpost/src/react-jwt-auth/package.json
+++ b/clusterpost/src/react-jwt-auth/package.json
@@ -49,7 +49,7 @@
     "gh-pages": "5.0.0",
     "react-scripts": "5.0.1",
     "rollup": "3.27.2",
-    "rollup-plugin-babel": "4.4.0",
+    "@rollup/plugin-babel": "5.0.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
     "@rollup/plugin-node-resolve": "15.1.0",
