--- a/clusterpost/src/clusterpost-list-react/package.json
+++ b/clusterpost/src/clusterpost-list-react/package.json
@@ -40,7 +40,7 @@
     "eslint-config-standard": "17.1.0",
     "eslint-config-standard-react": "13.0.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "14.0.0",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.34.0",
     "eslint-plugin-standard": "5.0.0",
