--- a/clusterpost/src/react-jwt-auth/package.json
+++ b/clusterpost/src/react-jwt-auth/package.json
@@ -26,7 +26,7 @@
     "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-redux": "^7.0.3 || ^8.0.0 || ^9.0.0",
-    "react-router-dom": "^5.0.1 || ^6.0.0",
+    "react-router-dom": "^5.0.1 || ^6.0.0 || ^7.0.0",
     "react-bootstrap": "^1.0.0-beta.9 || ^2.0.0"
   },
   "devDependencies": {
