--- a/clusterpost/src/hapi-jwt-couch/package.json
+++ b/clusterpost/src/hapi-jwt-couch/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.0",
-    "@hapi/joi": "^17.0.0",
+    "joi": "17.1.1",
     "bcrypt": "^5.0.0",
     "couch-provider": "^3.0.0",
     "couch-update-views": "^1.0.7",
